/*
 * $Id: ChangeLog,v 1.2183 2004/01/30 02:29:47 maurifull Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-30 03:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
    * build source\rtl\gtalleg if HB_GTALLEG is defined.

2004-01-29 23:20 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/gtalleg.c
    * Try 16 bit modes first, then 8 bit under DOS & Linux FB
  * makefile.bc
    + Added conditional gtalleg compilation

2004-01-30 03:00 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
    * auto detect allegro-devel installed and build gtalleg
    + new switch '--with allegro' to force allegro building
      when allegro-devel not installed from RPM

  * xharbour/bin/hb-func.sh
    * buily gtalleg as static lib only to not force linking with
      allegro libs. If user wants to use allegro in his apps he has
      to use -gtalleg swich in xhb* scripts or add to his prg sources:
      REQUEST HB_GT_ALLEG

  * xharbour/source/rtl/gtalleg/gtalleg.c
    * _mangled_main added to allow linking with shared allegro libs

2004-01-30 07:35 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/debug.c
    + add wrappers (some 3rd-party-libs still use these ones) for :
      __VMSTKLCOUNT()
      __VMPARLLIST()
      __VMSTKLLIST()
      __VMVARLGET()
      __VMVARLSET()

2004-01-30 00:25 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hbi18n.c
  * source/compiler/harbour.c
    ! Default International language name was not correctly saved into the HIL
      table.

  * source/rtl/teditor.prg
    ! Wraping when space was hit was done even if wordwrapping was off (and
      Wrap column was set to 0, causing soft newlines everywhere).

2004-01-30 05:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>