@@ -1,5 +1,5 @@
 /*
- * $Id: dbf1.c,v 1.52 2004/01/26 15:00:50 druzus Exp $
+ * $Id: dbf1.c,v 1.53 2004/01/28 14:45:40 druzus Exp $
  */
 
 /*
@@ -69,6 +69,9 @@
 #  include "hbapicdp.h"
 extern PHB_CODEPAGE s_cdpage;
 #endif
+
+// AJ: 2004-01-30
+extern BYTE *hb_szDBFNotExist;
 
 #define __PRG_SOURCE__ __FILE__
 
@@ -1784,12 +1787,23 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
 
    HB_TRACE(HB_TR_DEBUG, ("hb_dbfOpen(%p, %p)", pArea, pOpenInfo));
 
+   /* AJ: 2004-01-30
+      Added to release memory when opening a DBF which does not exist
+   */
+   hb_szDBFNotExist = pOpenInfo->abName ;
+
    pArea->szDataFileName = (char *) hb_xgrab( strlen( (char * ) pOpenInfo->abName)+1 );
    strcpy( pArea->szDataFileName, ( char * ) pOpenInfo->abName );
    pArea->atomAlias = hb_dynsymGet( ( char * ) pOpenInfo->atomAlias );
 
    if( ( ( PHB_DYNS ) pArea->atomAlias )->hArea )
    {
+      /* AJ: 2004-01-30
+         Added to release memory when opening a DBF with same alias
+      */
+      hb_xfree( pOpenInfo->abName );
+      hb_szDBFNotExist = NULL;
+
       hb_errRT_DBCMD( EG_DUPALIAS, EDBCMD_DUPALIAS, NULL, ( char * ) pOpenInfo->atomAlias );
       hb_xfree( pArea->szDataFileName );
       return FAILURE;
@@ -1839,7 +1853,7 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
          {
             hb_fsClose( pArea->hDataFile );
             pArea->hDataFile = FS_ERROR;
-	      bLock = TRUE;
+	       bLock = TRUE;
          }
       }
 #endif
@@ -1862,11 +1876,13 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
             hb_errPutOsCode( pError, 32 );
          else
             hb_errPutOsCode( pError, hb_fsError() );
+
          bRetry = ( SELF_ERROR( ( AREAP ) pArea, pError ) == E_RETRY );
       }
       else
          bRetry = FALSE;
    } while( bRetry );
+
    if( pError )
    {
       hb_errRelease( pError );
@@ -1876,8 +1892,10 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
    /* Exit if error */
    if( pArea->hDataFile == FS_ERROR )
    {
-      hb_xfree( pArea->szDataFileName );
+      if( pArea->szDataFileName )
+         hb_xfree( pArea->szDataFileName );
       pArea->szDataFileName = NULL;
+      hb_szDBFNotExist = NULL;
       return FAILURE;
    }
 
@@ -1885,6 +1903,7 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
    if( SELF_READDBHEADER( ( AREAP ) pArea ) == FAILURE )
    {
       SELF_CLOSE( ( AREAP ) pArea );
+      hb_szDBFNotExist = NULL;
       return FAILURE;
    }
 
@@ -1913,6 +1932,7 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
       {
          pOpenInfo->abName = tmp;
          SELF_CLOSE( ( AREAP ) pArea );
+         hb_szDBFNotExist = NULL;
          return FAILURE;
       }
       pOpenInfo->abName = tmp;
@@ -2041,6 +2061,7 @@ static ERRCODE hb_dbfOpen( DBFAREAP pArea, LPDBOPENINFO pOpenInfo )
    pArea->ulRecCount = hb_dbfCalcRecCount( pArea );
 
    /* Position cursor at the first record */
+   hb_szDBFNotExist = NULL;
    return SELF_GOTOP( ( AREAP ) pArea );
 }
 
