@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2183 2004/01/30 02:29:47 maurifull Exp $
+ * $Id: ChangeLog,v 1.2184 2004/01/30 08:49:17 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-01-30 16:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+   * source/rdd/dbf1.c
+   * source/rdd/dbcmd.c
+     ! fix to some memory leaks when:
+       % opening a dbf with same alias
+       % opening a dbf which does not exist
+       % opening a dbf with memo but no DBT/FPT found
+       % opening a corrupted dbf
 
 2004-01-30 03:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.nt
